# foto-carnet-tauri

./: package-lock.json  package.json  portable.conf.json
.github/workflows/: release.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/js/: config.js  data.js  export.js  files.js  filmstrip.js  history.js  init.js  interaction.js  navigation.js  render.js  reniec.js  session.js  state.js  tauri-bridge.js  ui.js  utils.js  watcher.js
