[package]
name = "foto-carnet-tauri"
version = "1.0.0"
description = "FotoCarnet — generador de carnets (Tauri)"
authors = ["Renato"]
edition = "2021"

[lib]
name = "foto_carnet_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif", "webp"] }
rayon = "1"
